refactor: git in its own package