@@ -1,9 +1,10 @@
 package commands;
 
 import java.io.IOException;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.HexFormat;
-import utils.Git;
+import git.Git;
 
 public class HashObject implements Executor {
 
@@ -20,7 +21,7 @@ public class HashObject implements Executor {
     }
     final String readPath = params[2];
     try {
-      byte[] sha1 = Git.createBlob(Paths.get(readPath));
+      byte[] sha1 = new Git(Path.of("./")).createBlob(Paths.get(readPath));
       System.out.println(HexFormat.of().formatHex(sha1));
     } catch (IOException ex) {
       System.err.println(ex.getMessage());
